# antoine

./: .flake8  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.agex/data/pr/: events.jsonl
.claude/: settings.json  skills.local.yaml.example
.claude/skills/agent-config/: SKILL.md
.claude/skills/agent-config/scripts/: show.sh
.claude/skills/cicd/: SKILL.md
.claude/skills/cicd/scripts/: portability-lint.sh
.claude/skills/code-lookup/: SKILL.md
.claude/skills/code-lookup/scripts/: classify.sh  grep.sh  recent.sh
.claude/skills/communicate/: SKILL.md
.claude/skills/eval/: SKILL.md
.claude/skills/repo-map/: SKILL.md
.claude/skills/repo-map/scripts/: connections.sh  graph.sh  profile.sh
.github/workflows/: publish.yml  security-checks.yml  tests.yml
antoine/: __init__.py  __main__.py
antoine/cli/: __init__.py  _errors.py  _output.py
antoine/cli/_commands/: __init__.py  classify.py  explain.py  grep.py  learn.py  log.py  recent.py  whoami.py
antoine/kata/: __init__.py
antoine/kata/log/: __init__.py  _args.py  _gc.py  _schema.py  _store.py
antoine/lookup/: __init__.py  ast_scope.py  classify.py  grep_context.py  recent_outline.py  render.py
antoine/repo/: __init__.py  __main__.py  connections.py  errors.py  graph.py  manifest.py  profile.py  render.py
docs/: skill-sources.md
docs/eval-rounds/: 2026-05-15-round-01.md  2026-05-15-smoke-02-examples.md  2026-05-16-round-02.md
docs/kata/: log-schema.md
docs/superpowers/plans/: 2026-05-15-repo-map.md  2026-05-15-scripts-eval-harness.md  2026-05-16-seer-classify.md  2026-05-17-kata-log-subsystem.md
docs/superpowers/specs/: 2026-05-15-repo-map-design.md  2026-05-15-scripts-eval-harness-design.md  2026-05-16-seer-classify-design.md  2026-05-17-kata-loop-design.md
experiments/scripts_eval/: README.md  RUNBOOK.md  _io.py  backfill.py  capture.py  corpus.py  corpus.yaml  judge.py  judge_rubric.md  manifest.py  report.py  summarize.py  switch-arm.sh  trial.py  validate.py
experiments/scripts_eval/hooks/: post_tool.py  pre_tool.py  subagent_stop.py
seer/: __init__.py  __main__.py
seer/cli/: __init__.py  _errors.py  _output.py
seer/cli/_commands/: __init__.py  classify.py  explain.py  grep.py  learn.py  recent.py  whoami.py
seer/lookup/: __init__.py  ast_scope.py  classify.py  grep_context.py  recent_outline.py  render.py
seer/repo/: __init__.py  __main__.py  config.py  connections.py  detect.py  errors.py  graph.py  manifest.py  profile.py  render.py
tests/: test_ast_scope.py  test_classify.py  test_classify_render.py  test_cli_chassis.py  test_cli_errors.py  test_cli_log_cmd.py  test_cli_output.py  test_cli_stubs.py  test_grep_cmd.py  test_grep_context.py  test_package.py  test_recent_cmd.py  test_recent_outline.py  test_repo_cli.py  test_repo_config.py  test_repo_connections.py  test_repo_detect.py  test_repo_errors.py  test_repo_graph.py  test_repo_manifest.py  test_repo_profile.py  test_repo_render.py
tests/kata/: test_log_args.py  test_log_gc.py  test_log_schema.py  test_log_store.py  test_package.py
tests/scripts_eval/: test_backfill.py  test_capture.py  test_corpus.py  test_hooks_post_tool.py  test_hooks_pre_tool.py  test_hooks_subagent_stop.py  test_io.py  test_judge.py  test_manifest.py  test_report.py  test_summarize.py  test_trial.py  test_validate.py
tests/scripts_eval/fixtures/: corpus_minimal.yaml  sidechain_min.jsonl  transcript_min.jsonl  transcript_with_late_msg.jsonl
