[project]
name = "antoine-cli"
version = "0.9.2"
description = "antoine — codebase lookup and indexing for agent skills (greenfield AgentCulture sibling)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/agentculture/antoine"
Issues = "https://github.com/agentculture/antoine/issues"

[project.scripts]
antoine = "antoine.cli:main"
kata = "antoine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["antoine"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "coverage>=7.2.0",
    "bandit>=1.7.5",
    "pylint>=2.17.0",
    "flake8>=6.1",
    "flake8-bandit>=4.1.1",
    "flake8-bugbear>=23.7.10",
    "black>=23.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]
experiments = [
    "anthropic>=0.40",
    "jsonschema>=4.20",
]

[tool.coverage.run]
source = ["antoine"]
# parallel + concurrency are required for pytest-xdist (`-n auto`) to
# produce per-worker `.coverage.*` files that coverage merges into a
# single `.coverage`. Without these, only the master process's slice
# is reported and modules exercised by every test look under-covered.
# sigterm = true flushes worker coverage on graceful shutdown.
# Mirrors agentculture/culture's [tool.coverage.run].
parallel = true
concurrency = ["thread", "multiprocessing"]
sigterm = true
omit = ["antoine/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["antoine"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
